cv_visual_transformer_train.out
0: n7
0: /home/richardalbr/computer_vision/CLTforSemanticSegmentation
0: Sa 10. Dez 02:34:03 KST 2022
absl-py==1.3.0
addict==2.4.0
aiohttp==3.8.3
aiosignal==1.3.1
async-timeout==4.0.2
attrs==22.1.0
cachetools==5.2.0
certifi==2022.9.24
charset-normalizer==2.1.1
click==8.1.3
colorama==0.4.6
commonmark==0.9.1
contourpy==1.0.6
cycler==0.11.0
fonttools==4.38.0
frozenlist==1.3.3
fsspec==2022.11.0
future==0.18.2
google-auth==2.15.0
google-auth-oauthlib==0.4.6
grpcio==1.51.1
idna==3.4
importlib-metadata==5.1.0
kiwisolver==1.4.4
lightning-utilities==0.4.2
Markdown==3.4.1
MarkupSafe==2.1.1
matplotlib==3.6.2
mmcls==0.24.1
mmcv-full==1.6.0
model-index==0.1.11
multidict==6.0.3
numpy==1.23.5
oauthlib==3.2.2
opencv-python==4.6.0.66
openmim==0.3.3
ordered-set==4.1.0
packaging==21.3
pandas==1.5.2
Pillow==9.3.0
prettytable==3.5.0
protobuf==3.20.1
pyasn1==0.4.8
pyasn1-modules==0.2.8
Pygments==2.13.0
pyparsing==3.0.9
python-dateutil==2.8.2
pytorch-lightning==1.8.4
pytz==2022.6
PyYAML==6.0
requests==2.28.1
requests-oauthlib==1.3.1
rich==12.6.0
rsa==4.9
six==1.16.0
tabulate==0.9.0
tensorboard==2.11.0
tensorboard-data-server==0.6.1
tensorboard-plugin-wit==1.8.1
tensorboardX==2.5.1
torch==1.12.1+cu113
torchaudio==0.12.1+cu113
torchmetrics==0.11.0
torchvision==0.13.1+cu113
tqdm==4.64.1
typing_extensions==4.4.0
urllib3==1.26.13
wcwidth==0.2.5
Werkzeug==2.2.2
yapf==0.32.0
yarl==1.8.2
zipp==3.11.0
0,1
DATASET mmsegmentation/mmseg/data/VOCdevkit/VOC2012
Traceback (most recent call last):
  File "/home/richardalbr/computer_vision/cvvenv/lib/python3.9/site-packages/mmcv/utils/config.py", line 103, in _validate_py_syntax
    ast.parse(content)
  File "/opt/ohpc/pub/apps/anaconda3/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 49
    dict(type='Collect', keys=['img', 'gt_semantic_seg', 'img_shape', 'scale_factor', 'flip', 'filename', 'ori_shape', 'pad_shape', 'img_norm_cfg'.])
                                                                                                                                                   ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/richardalbr/computer_vision/CLTforSemanticSegmentation/train_test.py", line 111, in <module>
    main(args['model'], args['config'], args['dataset'], args['mode'])
  File "/home/richardalbr/computer_vision/CLTforSemanticSegmentation/train_test.py", line 35, in main
    cfg = mmcv.Config.fromfile(config_file)
  File "/home/richardalbr/computer_vision/cvvenv/lib/python3.9/site-packages/mmcv/utils/config.py", line 340, in fromfile
    cfg_dict, cfg_text = Config._file2dict(filename,
  File "/home/richardalbr/computer_vision/cvvenv/lib/python3.9/site-packages/mmcv/utils/config.py", line 207, in _file2dict
    Config._validate_py_syntax(filename)
  File "/home/richardalbr/computer_vision/cvvenv/lib/python3.9/site-packages/mmcv/utils/config.py", line 105, in _validate_py_syntax
    raise SyntaxError('There are syntax errors in config '
SyntaxError: There are syntax errors in config file /home/richardalbr/computer_vision/CLTforSemanticSegmentation/config.py: invalid syntax (<unknown>, line 49)
Exception ignored in: <function _TemporaryFileCloser.__del__ at 0x7fe1b40d1310>
Traceback (most recent call last):
  File "/opt/ohpc/pub/apps/anaconda3/lib/python3.9/tempfile.py", line 441, in __del__
    self.close()
  File "/opt/ohpc/pub/apps/anaconda3/lib/python3.9/tempfile.py", line 437, in close
    unlink(self.name)
FileNotFoundError: [Errno 2] No such file or directory: '/tmp/tmpv80x0jth/tmps1xi4kcp.py'
